refer/v20250306/pion_3pt/ssub.err
Traceback (most recent call last):
  File "./beta6.20_mu-0.2770_ms-0.2400_L24x72_creat.pion.py", line 1, in <module>
    from creat_chroma import *
  File "/public/home/zhangxin/lattice-qcd/pion_3pt/creat_chroma.py", line 5
    lattice_size: list[int],
                ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "./beta6.20_mu-0.2770_ms-0.2400_L24x72_creat.pion.py", line 1, in <module>
    from creat_chroma import *
  File "/public/home/zhangxin/lattice-qcd/pion_3pt/creat_chroma.py", line 5
    lattice_size: list[int],
                ^
SyntaxError: invalid syntax
